--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <div class="container">
                                 <div class="row">
                                     <div class="col-sm-12">
-                                        <h4 class="title text-center">Bootstrap Toolbar Collapse</h4>
+                                        <h4 class="title text-center">Bootstrap Slide Panel Top</h4>
                                     </div>
                                     <div class="col-sm-4">
                                         <div class="thumbnail">
@@ -72,7 +72,7 @@
                     <div class="panel-heading" role="tab" id="headingOne">
                         <h4 class="panel-title text-center">
                             <a data-toggle="collapse" data-parent="#home-accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                                <span>Bootstrap Toolbar Collapse</span>
+                                <span>Bootstrap Slide Panel Top</span>
                             </a>
                         </h4>
                     </div>
@@ -84,10 +84,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
-                        <h1>Bootstrap Toolbar Collapse</h1>
+                        <h1 class="text-center">Bootstrap Slide Panel Top</h1>
                         <hr>
-                        <p class="lead">Qui ipsorum lingua Celtae, nostra Galli appellantur. Magna pars studiorum, prodita quaerimus. Me non paenitet nullum festiviorem excogitasse ad hoc.</p>
-                        <p>Gallia est omnis divisa in partes tres, quarum. Salutantibus vitae elit libero, a pharetra augue. Quid securi etiam tamquam eu fugiat nulla pariatur. Contra legem facit qui id facit quod lex prohibet. Quam diu etiam furor iste tuus nos eludet?</p>
+                        <p class="lead text-center">Qui ipsorum lingua Celtae, nostra Galli appellantur. Magna pars studiorum, prodita quaerimus. Me non paenitet nullum festiviorem excogitasse ad hoc.</p>
+                        <p class="text-center">Gallia est omnis divisa in partes tres, quarum. Salutantibus vitae elit libero, a pharetra augue. Quid securi etiam tamquam eu fugiat nulla pariatur. Contra legem facit qui id facit quod lex prohibet. Quam diu etiam furor iste tuus nos eludet?</p>
                     </div>
                 </div>
             </div>
@@ -97,13 +97,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
-                        <menu class="list-inline pull-right">
-                            <li><a href="https://twitter.com/samcome" class="twitter-follow-button" data-show-count="false">Follow @samcome</a>
-                            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></li>
-                            <li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://samcome.github.io/webfont-medical-icons/" data-text="Free WebFont Medical Icons" data-via="samcome" data-hashtags="webfont" data-dnt="true">Tweet</a>
-                            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></li>
-                        </menu>
-                        <p class="pull-left">This project is designed and built with <span class="glyphicon glyphicon-heart"></span> by <a href="https://github.com/samcome" target="_blank">@samcome</a>.</p>
+                        <hr>
+                        <p class="text-center">This project is designed and built with <span class="glyphicon glyphicon-heart"></span> by <a href="https://github.com/samcome" target="_blank">@samcome</a>.</p>
                     </div>
                 </div>
             </div>
