--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+
+        <!-- Fork-me (can delete this) -->
+        <a class="fork-me" href="https://github.com/samcome/bootstrap-slide-panel-top">
+            <img src="https://camo.githubusercontent.com/567c3a48d796e2fc06ea80409cc9dd82bf714434/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" width="149" height="149">
+        </a>
+
         <header>
             <div class="panel-group" id="home-accordion" role="tablist" aria-multiselectable="true">
                 <div class="panel panel-default">
