--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <h1 class="text-center">Bootstrap Slide Panel Top</h1>
                         <hr>
                         <p class="lead text-center">Qui ipsorum lingua Celtae, nostra Galli appellantur. Magna pars studiorum, prodita quaerimus. Me non paenitet nullum festiviorem excogitasse ad hoc.</p>
-                        <p class="text-center">Gallia est omnis divisa in partes tres, quarum. Salutantibus vitae elit libero, a pharetra augue. Quid securi etiam tamquam eu fugiat nulla pariatur. Contra legem facit qui id facit quod lex prohibet. Quam diu etiam furor iste tuus nos eludet?</p>
+                        <p class="text-center">Gallia est omnis divisa in partes tres, quarum. Salutantibus vitae elit libero, a pharetra augue.<br>Quid securi etiam tamquam eu fugiat nulla pariatur. Contra legem facit qui id facit quod lex prohibet. Quam diu etiam furor iste tuus nos eludet?</p>
                     </div>
                 </div>
             </div>
